# green-ai-api

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: calculator.py  carbon_data.py  logging_config.py  main.py  models.py
docs/: api-reference.md
tests/: test_api.py  test_calculator.py
